fixed solution (previous doesn't correctly processed data)